// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Marker Components Snapshots ActivityMarker matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "white",
      "borderColor": "#ccc",
      "borderRadius": 5,
      "borderWidth": 1,
      "elevation": 3,
      "padding": 5,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <View
    color="green"
    size={20}
    testID="icon-run"
  />
</View>
`;

exports[`Marker Components Snapshots CoffeeMarker matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "white",
      "borderColor": "#ccc",
      "borderRadius": 5,
      "borderWidth": 1,
      "elevation": 3,
      "padding": 5,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <View
    color="black"
    size={24}
    testID="icon-coffee"
  />
</View>
`;

exports[`Marker Components Snapshots RestaurantMarker matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "white",
      "borderColor": "#ccc",
      "borderRadius": 5,
      "borderWidth": 1,
      "elevation": 3,
      "padding": 5,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <View
    color="orange"
    size={24}
    testID="icon-silverware-fork-knife"
  />
</View>
`;
